<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payMenu"
    android:background="#000000"
    >

    <TextView
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/ezyfoody"
        android:textSize="16pt"
        android:background="#BA9F4F"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-black"
        />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price_rp_123"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:background="#BA9F4F"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:textSize="12pt"
        />

    <Button
        android:id="@+id/payButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_now"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_above="@+id/Footer"
        android:layout_centerHorizontal="true"
        android:onClick="openReceiptMenu"
        android:textColor="#FFFFFF"
        android:background="#BA9F4F"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-black"
        />

    <TextView
        android:id="@+id/Footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginBottom="-2dp"
        android:background="#BA9F4F"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

</RelativeLayout>